--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "nodemon server.js",
-    "start:prod": "NODE_ENV=production nodemon server.js",
+    "start:prod": "SET NODE_ENV=production && nodemon server.js",
     "debug": "ndb server.js"
   },
   "keywords": [],
@@ -14,9 +14,16 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-mongo-sanitize": "^2.1.0",
+    "express-rate-limit": "^5.3.0",
+    "helmet": "^4.6.0",
+    "hpp": "^0.2.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.0",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.6.3",
     "swagger-ui-express": "^4.1.6",
+    "xss-clean": "^0.1.1",
     "yamljs": "^0.3.0"
   },
   "engines": {
