--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^6.0.0",
     "morgan": "^1.10.0",
     "nodemailer": "^6.6.3",
+    "slugify": "^1.6.0",
     "swagger-ui-express": "^4.1.6",
     "xss-clean": "^0.1.1",
     "yamljs": "^0.3.0"
