--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aberrations-sheets-backend",
+  "name": "aberrations-sheets-api",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -8,10 +8,19 @@
     "start:prod": "SET NODE_ENV=production && nodemon server.js",
     "debug": "ndb server.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sodalitegames/aberrations-sheets-api.git"
+  },
   "keywords": [],
   "author": "Talon Durrant",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/sodalitegames/aberrations-sheets-api/issues"
+  },
+  "homepage": "https://github.com/sodalitegames/aberrations-sheets-api#readme",
   "dependencies": {
+    "axios": "^0.24.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
@@ -27,6 +36,7 @@
     "pug": "^3.0.2",
     "slugify": "^1.6.0",
     "swagger-ui-express": "^4.1.6",
+    "validator": "^13.7.0",
     "xss-clean": "^0.1.1",
     "yamljs": "^0.3.0"
   }
