--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "nodemailer": "^6.6.3",
     "pug": "^3.0.2",
     "slugify": "^1.6.0",
+    "socket.io": "^4.4.0",
     "swagger-ui-express": "^4.1.6",
     "validator": "^13.7.0",
     "xss-clean": "^0.1.1",
