--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
     "express": "^4.17.1",
     "express-mongo-sanitize": "^2.1.0",
     "express-rate-limit": "^5.3.0",
+    "firebase-admin": "^11.7.0",
     "helmet": "^4.6.0",
     "hpp": "^0.2.3",
-    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.0",
     "morgan": "^1.10.0",
     "pug": "^3.0.2",
